--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,11 +1,138 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    tools:context=".MainActivity">
 
-    <TextView android:text="@string/hello_world" android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    <TextView android:text="Huidige gebruiker"
+        style="@style/GroteText.Rood"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/huidigeGebruiker"/>
+    
+    <TextView android:text=" is aan zet"
+        style="@style/GroteText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" 
+        android:id="@+id/isAanZetText"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/huidigeGebruiker" 
+        />
+
+    <TextView
+        style="@style/HetWoord"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="huidigwoord"
+        android:id="@+id/huidigWoord"
+        android:layout_below="@+id/huidigeGebruiker"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="33dp" />
+
+
+
+    <GridLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_columnSpan="2"
+        android:layout_rowSpan="2"
+        android:columnCount="4"
+        android:rowCount="7"
+        android:orientation="horizontal"
+        android:layout_alignParentBottom="true"
+        android:layout_alignEnd="@+id/huidigWoord"
+        android:layout_alignParentStart="true">
+
+            <Button android:text="A"
+                android:layout_row="0"
+                android:layout_column="0" />
+            <Button android:text="B"
+                android:layout_row="0"
+                android:layout_column="1" />
+            <Button android:text="C"
+                android:layout_row="0"
+                android:layout_column="2" />
+            <Button android:text="D"
+                android:layout_row="0"
+                android:layout_column="3" />
+            <Button android:text="E"
+                android:layout_row="1"
+                android:layout_column="0" />
+            <Button android:text="F"
+                android:layout_row="1"
+                android:layout_column="1" />
+            <Button android:text="G"
+                android:layout_row="1"
+                android:layout_column="2" />
+            <Button android:text="H"
+                android:layout_row="1"
+                android:layout_column="3" />
+            <Button android:text="I"
+                android:layout_row="2"
+                android:layout_column="0" />
+            <Button android:text="J"
+                android:layout_row="2"
+                android:layout_column="1" />
+            <Button android:text="K"
+                android:layout_row="2"
+                android:layout_column="2" />
+            <Button android:text="L"
+                android:layout_row="2"
+                android:layout_column="3" />
+            <Button android:text="M"
+                android:layout_row="3"
+                android:layout_column="0" />
+            <Button android:text="N"
+                android:layout_row="3"
+                android:layout_column="1" />
+            <Button android:text="O"
+                android:layout_row="3"
+                android:layout_column="2" />
+            <Button android:text="P"
+                android:layout_row="3"
+                android:layout_column="3" />
+            <Button android:text="Q"
+                android:layout_row="4"
+                android:layout_column="0" />
+            <Button android:text="R"
+                android:layout_row="4"
+                android:layout_column="1" />
+            <Button android:text="S"
+                android:layout_row="4"
+                android:layout_column="2" />
+            <Button android:text="T"
+                android:layout_row="4"
+                android:layout_column="3" />
+            <Button android:text="U"
+                android:layout_row="5"
+                android:layout_column="0" />
+            <Button android:text="V"
+                android:layout_row="5"
+                android:layout_column="1" />
+            <Button android:text="W"
+                android:layout_row="5"
+                android:layout_column="2" />
+            <Button android:text="X"
+                android:layout_row="5"
+                android:layout_column="3" />
+
+        <Button android:text="Y"
+            android:layout_row="6"
+            android:layout_column="1"
+            />
+
+        <Button android:text="Z"
+            android:layout_row="6"
+            android:layout_column="2" />
+
+
+    </GridLayout>
+
 
 </RelativeLayout>
