--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,7 +1,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
@@ -34,102 +34,148 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="33dp" />
 
-
-
     <GridLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:layout_columnSpan="2"
-        android:layout_rowSpan="2"
-        android:columnCount="4"
-        android:rowCount="7"
         android:orientation="horizontal"
-        android:layout_alignParentBottom="true"
-        android:layout_alignEnd="@+id/huidigWoord"
-        android:layout_alignParentStart="true">
+        android:layout_alignParentBottom="true">
+
+        
 
             <Button android:text="A"
+                android:id="@+id/Abtn"
                 android:layout_row="0"
-                android:layout_column="0" />
+                android:layout_column="0"
+                android:onClick="letterClicked" />
             <Button android:text="B"
+                android:id="@+id/Bbtn"
                 android:layout_row="0"
-                android:layout_column="1" />
+                android:layout_column="1"
+                android:onClick="letterClicked" />
             <Button android:text="C"
+                android:id="@+id/Cbtn"
                 android:layout_row="0"
-                android:layout_column="2" />
+                android:layout_column="2"
+                android:onClick="letterClicked" />
             <Button android:text="D"
+                android:id="@+id/Dbtn"
                 android:layout_row="0"
-                android:layout_column="3" />
+                android:layout_column="3"
+                android:onClick="letterClicked" />
             <Button android:text="E"
+                android:id="@+id/Ebtn"
                 android:layout_row="1"
-                android:layout_column="0" />
+                android:layout_column="0"
+                android:onClick="letterClicked" />
             <Button android:text="F"
+                android:id="@+id/Fbtn"
                 android:layout_row="1"
-                android:layout_column="1" />
+                android:layout_column="1"
+                android:onClick="letterClicked" />
             <Button android:text="G"
+                android:id="@+id/Gbtn"
                 android:layout_row="1"
-                android:layout_column="2" />
+                android:layout_column="2"
+                android:onClick="letterClicked" />
             <Button android:text="H"
+                android:id="@+id/Hbtn"
                 android:layout_row="1"
-                android:layout_column="3" />
+                android:layout_column="3"
+                android:onClick="letterClicked" />
             <Button android:text="I"
+                android:id="@+id/Ibtn"
                 android:layout_row="2"
-                android:layout_column="0" />
+                android:layout_column="0"
+                android:onClick="letterClicked" />
             <Button android:text="J"
+                android:id="@+id/Jbtn"
                 android:layout_row="2"
-                android:layout_column="1" />
+                android:layout_column="1"
+                android:onClick="letterClicked" />
             <Button android:text="K"
+                android:id="@+id/Kbtn"
                 android:layout_row="2"
-                android:layout_column="2" />
+                android:layout_column="2"
+                android:onClick="letterClicked" />
             <Button android:text="L"
+                android:id="@+id/Lbtn"
                 android:layout_row="2"
-                android:layout_column="3" />
+                android:layout_column="3"
+                android:onClick="letterClicked" />
             <Button android:text="M"
+                android:id="@+id/Mbtn"
                 android:layout_row="3"
-                android:layout_column="0" />
+                android:layout_column="0"
+                android:onClick="letterClicked" />
             <Button android:text="N"
+                android:id="@+id/Nbtn"
                 android:layout_row="3"
-                android:layout_column="1" />
+                android:layout_column="1"
+                android:onClick="letterClicked" />
             <Button android:text="O"
+                android:id="@+id/Obtn"
                 android:layout_row="3"
-                android:layout_column="2" />
+                android:layout_column="2"
+                android:onClick="letterClicked" />
             <Button android:text="P"
+                android:id="@+id/Pbtn"
                 android:layout_row="3"
-                android:layout_column="3" />
+                android:layout_column="3"
+                android:onClick="letterClicked" />
             <Button android:text="Q"
+                android:id="@+id/Qbtn"
                 android:layout_row="4"
-                android:layout_column="0" />
+                android:layout_column="0"
+                android:onClick="letterClicked" />
             <Button android:text="R"
+                android:id="@+id/Rbtn"
                 android:layout_row="4"
-                android:layout_column="1" />
+                android:layout_column="1"
+                android:onClick="letterClicked" />
             <Button android:text="S"
+                android:id="@+id/Sbtn"
                 android:layout_row="4"
-                android:layout_column="2" />
+                android:layout_column="2"
+                android:onClick="letterClicked" />
             <Button android:text="T"
+                android:id="@+id/Tbtn"
                 android:layout_row="4"
-                android:layout_column="3" />
+                android:layout_column="3"
+                android:onClick="letterClicked" />
             <Button android:text="U"
+                android:id="@+id/Ubtn"
                 android:layout_row="5"
-                android:layout_column="0" />
+                android:layout_column="0"
+                android:onClick="letterClicked" />
             <Button android:text="V"
+                android:id="@+id/Vbtn"
                 android:layout_row="5"
-                android:layout_column="1" />
+                android:layout_column="1"
+                android:onClick="letterClicked" />
             <Button android:text="W"
+                android:id="@+id/Wbtn"
                 android:layout_row="5"
-                android:layout_column="2" />
+                android:layout_column="2"
+                android:onClick="letterClicked" />
             <Button android:text="X"
+                android:id="@+id/Xbtn"
                 android:layout_row="5"
-                android:layout_column="3" />
+                android:layout_column="3"
+                android:onClick="letterClicked" />
 
-        <Button android:text="Y"
-            android:layout_row="6"
-            android:layout_column="1"
-            />
+            <Button android:text="Y"
+                android:id="@+id/Ybtn"
+                android:layout_row="6"
+                android:layout_column="1"
+                android:onClick="letterClicked"
+                />
 
-        <Button android:text="Z"
-            android:layout_row="6"
-            android:layout_column="2" />
+            <Button android:text="Z"
+                android:id="@+id/Zbtn"
+                android:layout_row="6"
+                android:layout_column="2"
+                android:onClick="letterClicked" />
 
 
     </GridLayout>
