--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -15,7 +15,7 @@ xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
 
     <item
         android:id="@+id/restart"
-        android:title="Restart"
+        android:title="@string/restartText"
         app:showAsAction="never"
         android:orderInCategory="101"
         />
@@ -23,21 +23,21 @@ xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
 
     <item
         android:id="@+id/players"
-        android:title="Players"
+        android:title="@string/playersTxt"
         app:showAsAction="never"
         android:orderInCategory="102"
         />
 
     <item
         android:id="@+id/language"
-        android:title="Language"
+        android:title="@string/languageTxt"
         app:showAsAction="never"
         android:orderInCategory="103"
         />
 
     <item
         android:id="@+id/highscores"
-        android:title="Highscores"
+        android:title="@string/highscoresTxt"
         app:showAsAction="never"
         android:orderInCategory="104"
         />
