--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,11 +8,11 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     tools:context=".MainActivity">
 
-    <TextView android:text="Huidige gebruiker"
+    <TextView android:text="Huidige Speler"
         style="@style/GroteText.Rood"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/huidigeGebruiker"/>
+        android:id="@+id/huidigeSpeler"/>
     
     <TextView android:text=" is aan zet"
         style="@style/GroteText"
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content" 
         android:id="@+id/isAanZetText"
         android:layout_alignParentTop="true"
-        android:layout_toEndOf="@+id/huidigeGebruiker" 
+        android:layout_toEndOf="@+id/huidigeSpeler"
         />
 
     <TextView
@@ -30,7 +30,7 @@
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="GHOST"
         android:id="@+id/huidigWoord"
-        android:layout_below="@+id/huidigeGebruiker"
+        android:layout_below="@+id/huidigeSpeler"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="33dp" />
 
