--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -34,7 +34,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:textAppearance="?android:attr/textAppearanceLarge"
-                android:text="GHOST"
+                android:text="@string/beginTekst"
                 android:id="@+id/huidigWoord"
                 android:layout_below="@+id/huidigeSpeler"
                 android:layout_centerHorizontal="true"
