--- a/app/src/main/res/layout/activity_change_players.xml
+++ b/app/src/main/res/layout/activity_change_players.xml
@@ -22,6 +22,11 @@
         android:id="@+id/player1NameTV"
         android:layout_marginBottom="30dp" />
 
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/spinnerTV1" />
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
