--- a/app/src/main/res/layout/row_layout_2.xml
+++ b/app/src/main/res/layout/row_layout_2.xml
@@ -6,20 +6,21 @@
     tools:context=".MainActivity">
 
 
-    <ImageView
+    <TextView
         android:layout_width="25dp"
         android:layout_height="25dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="25dp"
         android:src="@drawable/red_dot"
-        android:id="@+id/imageView1"/>
+        android:id="@+id/nameView"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView1"
         android:textSize="30sp"
         android:textStyle="bold"
-        android:padding="15dp"/>
+        android:padding="15dp"
+        android:id="@+id/scoreView"
+        />
 
 </LinearLayout>
