--- a/app/src/main/res/layout/activity_change_players.xml
+++ b/app/src/main/res/layout/activity_change_players.xml
@@ -1,17 +1,21 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent" 
-    android:padding="30dp"
+    android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_margin="10dp"
-    tools:context="nl.mprog.Ghost.change_players">
+    tools:context="nl.mprog.Ghost.change_players"
+    android:padding="5dp">
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Change name of Player 1:"
-        android:id="@+id/textChange1TV" />
+        android:id="@+id/textChange1TV"
+        android:background="#ffaf0004"
+        android:textColor="#FFFFFF"
+        android:padding="5dp"
+        android:textStyle="bold" />
 
     <EditText
         android:layout_width="match_parent"
@@ -20,19 +24,47 @@
         android:text="Name Player 1"
         android:ems="10"
         android:id="@+id/player1NameTV"
-        android:layout_marginBottom="30dp" />
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/abc_ab_bottom_solid_light_holo"
+        android:padding="5dp"
+        android:textSize="20dp"
+        android:textStyle="italic" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="OR select previous player"
+        android:id="@+id/textVieworPrevious"
+        android:layout_gravity="center_horizontal|left"
+        android:padding="5dp"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:background="#ffaf0004"
+        android:textColor="#FFFFFF" />
 
     <Spinner
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:id="@+id/spinnerTV1" />
+        android:id="@+id/spinnerTV1"
+        android:background="@drawable/abc_ab_bottom_solid_light_holo"
+        android:padding="5dp" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp" />
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Change name of Player 2:"
-        android:id="@+id/textChange2TV" />
+        android:id="@+id/textChange2TV"
+        android:padding="5dp"
+        android:background="#ffaf0004"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold" />
 
     <EditText
         android:layout_width="match_parent"
@@ -41,14 +73,50 @@
         android:text="Name Player 2"
         android:ems="10"
         android:id="@+id/player2NameTV"
-        android:layout_marginBottom="30dp" />
+        android:layout_marginBottom="10dp"
+        android:background="@drawable/abc_ab_bottom_solid_light_holo"
+        android:padding="5dp"
+        android:textSize="20dp"
+        android:textStyle="italic" />
+
+    <TextView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:text="OR select a previous player"
+        android:id="@+id/textVieworPrevious2"
+        android:layout_gravity="center_horizontal|left"
+        android:padding="5dp"
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:textColor="#FFFFFF"
+        android:background="#ffaf0004" />
+
+    <Spinner
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/spinnerTV2"
+        android:background="@drawable/abc_ab_bottom_solid_light_holo"
+        android:padding="5dp" />
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:layout_marginBottom="50dp" />
 
     <Button
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Submit"
+        android:text="Play!"
         android:id="@+id/submitTV"
-        android:layout_gravity="right"
         android:onClick="onSubmit"
-        android:nestedScrollingEnabled="true" />
+        android:nestedScrollingEnabled="true"
+        android:layout_gravity="bottom|right"
+        android:background="#ffaf0004"
+        android:padding="5dp"
+        android:textColor="#FFFFFF"
+        android:textSize="30dp"
+        android:textStyle="bold" />
+    
 </LinearLayout>
