--- a/app/src/main/res/layout/row_layout_2.xml
+++ b/app/src/main/res/layout/row_layout_2.xml
@@ -1,3 +1,8 @@
+<!--
+Mischa Hondius
+6053017
+-->
+
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -11,7 +16,7 @@
         android:layout_height="25dp"
         android:layout_marginLeft="10dp"
         android:layout_marginTop="25dp"
-        android:src="@drawable/red_dot"
+        android:src="@drawable/ic_launcher"
         android:id="@+id/nameView"/>
 
     <TextView
