--- a/app/src/main/res/menu/menu_first__time.xml
+++ b/app/src/main/res/menu/menu_first__time.xml
@@ -5,5 +5,6 @@ Mischa Hondius
     
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context="nl.mprog.Ghost.change_players">
+    xmlns:tools="http://schemas.android.com/tools" tools:context="nl.mprog.Ghost.first_Time">
+
 </menu>
