--- a/app/src/main/res/menu/menu_high_scores.xml
+++ b/app/src/main/res/menu/menu_high_scores.xml
@@ -1,3 +1,8 @@
+<!--
+Mischa Hondius
+6053017
+-->
+
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools" 
