--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,32 +1,34 @@
+<!--
+Mischa Hondius
+6053017
+-->
+    
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
 xmlns:app="http://schemas.android.com/apk/res-auto"
-xmlns:tools="http://schemas.android.com/tools" tools:context=".MainActivity">
-
-    <item
+xmlns:tools="http://schemas.android.com/tools" 
+tools:context=".MainActivity"
+ >
+    <item 
         android:id="@+id/restart"
         android:title="@string/restartText"
-        app:showAsAction="never"
         android:orderInCategory="101"
         />
 
     <item
         android:id="@+id/players"
         android:title="@string/playersTxt"
-        app:showAsAction="never"
         android:orderInCategory="102"
         />
 
     <item
         android:id="@+id/language"
         android:title="@string/languageTxt"
-        app:showAsAction="never"
         android:orderInCategory="103"
         />
 
     <item
         android:id="@+id/highscores"
         android:title="@string/highscoresTxt"
-        app:showAsAction="never"
         android:orderInCategory="104"
         />
 
