--- a/app/src/main/res/layout/activity_first__time.xml
+++ b/app/src/main/res/layout/activity_first__time.xml
@@ -18,10 +18,11 @@ Mischa Hondius
         android:textAppearance="?android:attr/textAppearanceLarge"
         android:text="Enter name of player 1"
         android:id="@+id/textChange1TVFirst"
-        android:background="#ffaf0004"
+        android:background="#ff4646"
         android:textColor="#FFFFFF"
         android:padding="5dp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textSize="15dp" />
 
     <EditText
         android:layout_width="match_parent"
@@ -32,7 +33,7 @@ Mischa Hondius
         android:layout_marginBottom="10dp"
         android:background="@drawable/abc_ab_bottom_solid_light_holo"
         android:padding="5dp"
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:textStyle="italic" />
 
     <TextView
@@ -43,9 +44,9 @@ Mischa Hondius
         android:id="@+id/textVieworPreviousFirst"
         android:layout_gravity="center_horizontal|left"
         android:padding="5dp"
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:textStyle="bold"
-        android:background="#ffaf0004"
+        android:background="#ff4646"
         android:textColor="#FFFFFF" />
 
     <Spinner
@@ -68,9 +69,10 @@ Mischa Hondius
         android:text="Enter name of player 2"
         android:id="@+id/textChange2TVFirst"
         android:padding="5dp"
-        android:background="#ffaf0004"
+        android:background="#ff4646"
         android:textColor="#FFFFFF"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textSize="15dp" />
 
     <EditText
         android:layout_width="match_parent"
@@ -81,7 +83,7 @@ Mischa Hondius
         android:layout_marginBottom="10dp"
         android:background="@drawable/abc_ab_bottom_solid_light_holo"
         android:padding="5dp"
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:textStyle="italic" />
 
     <TextView
@@ -92,10 +94,10 @@ Mischa Hondius
         android:id="@+id/textVieworPrevious2First"
         android:layout_gravity="center_horizontal|left"
         android:padding="5dp"
-        android:textSize="20dp"
+        android:textSize="15dp"
         android:textStyle="bold"
         android:textColor="#FFFFFF"
-        android:background="#ffaf0004" />
+        android:background="#ff4646" />
 
     <Spinner
         android:layout_width="match_parent"
@@ -109,20 +111,24 @@ Mischa Hondius
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
-        android:layout_marginBottom="50dp" />
+        android:layout_marginBottom="75dp" />
 
     <Button
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Play!"
+        android:text="Play"
         android:id="@+id/submitTVFirst"
         android:onClick="onSubmit"
-        android:nestedScrollingEnabled="true"
+        android:nestedScrollingEnabled="false"
         android:layout_gravity="bottom|right"
-        android:background="#ffaf0004"
-        android:padding="5dp"
+        android:background="#ff4646"
         android:textColor="#FFFFFF"
-        android:textSize="30dp"
-        android:textStyle="bold" />
+        android:textSize="20dp"
+        android:textStyle="bold"
+        android:layout_marginRight="10dp"
+        android:paddingLeft="15dp"
+        android:paddingTop="5dp"
+        android:paddingRight="15dp"
+        android:paddingBottom="5dp" />
 
 </LinearLayout>
