--- a/app/src/main/res/menu/menu_first__time.xml
+++ b/app/src/main/res/menu/menu_first__time.xml
@@ -3,8 +3,5 @@ Mischa Hondius
 6053017
 -->
     
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context="nl.mprog.Ghost.first_Time">
-
+<menu xmlns:tools="http://schemas.android.com/tools" tools:context="nl.mprog.Ghost.FirstTimeActivity">
 </menu>
