--- a/app/src/main/res/menu/menu_high_scores.xml
+++ b/app/src/main/res/menu/menu_high_scores.xml
@@ -2,10 +2,7 @@
 Mischa Hondius
 6053017
 -->
-
-<menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" 
-    tools:context="nl.mprog.Ghost.HighScores">
-
+    
+<menu xmlns:tools="http://schemas.android.com/tools" 
+    tools:context="nl.mprog.Ghost.HighScoresActivity">
 </menu>
